nav updates style

--- a/contacts.html
+++ b/contacts.html
@@ -14,7 +14,8 @@
 
   <!-- Google fonts -->
   <link href="https://fonts.googleapis.com/css?family=Special+Elite&display=swap" rel="stylesheet">
-  
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+
   <!-- Local CSS styles  -->
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="css/brm-logo.css">
@@ -26,15 +27,24 @@
 
 <body>
 
+  <!-- ============= BANNER ============== -->  
+  <div class="brm-cont-logo">
+    <b class="text-elite bold-title fs-4 text-red">BRM Contractors</b>
+    <b class="text-elite bold-title fs-4 text-red me-3 float-end">724.787.3758</b>
+  </div>
+  <!-- ============= BANNER END// ============== -->
 
   <!-- ============= NAVBAR ============== -->
   <nav id="navbar_top" class="navbar navbar-expand-lg navbar-dark bg-red">
   <div class="container">
-    <a class="navbar-brand text-elite" href="index.html">BRM</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" 
+    <a class="navbar-brand text-elite py-0" href="index.html"><span class="material-symbols-outlined" style="font-size: 36px;">
+          home
+          </span>
+    </a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" 
         data-bs-target="#main_nav"  aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
+      <span class="navbar-toggler-icon"></span>
+    </button>
     <div class="collapse navbar-collapse" id="main_nav">
     
 
@@ -64,8 +74,8 @@
   <!-- ============= CONTENT ============== --> 
   <div class="container" style="max-width: 720px;padding-bottom: 1500px;">
     <header class="py-4">
-      <b class="text-elite bold-title">Contacts</b> 
-      <h2 class="text-red py-4">This site is under construction</h2>
+      <h1 class="text-elite bold-title">Connect with BRM</h1> 
+      <h2 class="text-red py-1">This site is under construction</h2>
     </header> <!-- section-header.// -->
   </div>
   <!-- ============= CONTENT END// ============== -->
