--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="keywords" content="home repair construciton deck bathroom kitchen drywall paint roofing roof siding fences" />
   <meta name="description" content="BRM - Total Servcie home repair, remodeling and contruction" />  
-  <title>BRM Contractors Inc</title>
+  <title>About BRM Contractors</title>
 
   <!-- Latest compiled and minified CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
@@ -14,6 +14,7 @@
 
   <!-- Google fonts -->
   <link href="https://fonts.googleapis.com/css?family=Special+Elite&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
   
   <!-- Local CSS styles  -->
   <link rel="stylesheet" href="css/styles.css">
@@ -26,20 +27,29 @@
 
 <body>
 
+  <!-- ============= BANNER ============== -->  
+  <div class="brm-cont-logo">
+    <b class="text-elite bold-title fs-4 text-red">BRM Contractors</b>
+    <b class="text-elite bold-title fs-4 text-red me-3 float-end">724.787.3758</b>
+  </div>
+  <!-- ============= BANNER END// ============== -->
 
   <!-- ============= NAVBAR ============== -->
   <nav id="navbar_top" class="navbar navbar-expand-lg navbar-dark bg-red">
-  <div class="container">
-    <a class="navbar-brand text-elite" href="index.html">BRM</a>
+    <div class="container">
+      <a class="navbar-brand text-elite py-0" href="index.html"><span class="material-symbols-outlined" style="font-size: 36px;">
+            home
+            </span>
+      </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" 
-        data-bs-target="#main_nav"  aria-expanded="false" aria-label="Toggle navigation">
+          data-bs-target="#main_nav"  aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-    <div class="collapse navbar-collapse" id="main_nav">
+      <div class="collapse navbar-collapse" id="main_nav">
     
 
     <ul class="navbar-nav ms-auto">
-      <li class="nav-item"><a class="nav-link" href="about.html.html"> About </a></li>
+      <li class="nav-item"><a class="nav-link" href="about.html"> About </a></li>
       <li class="nav-item"><a class="nav-link" href="contacts.html"> Contact</a></li>
       <li class="nav-item dropdown">
         <a class="nav-link  dropdown-toggle" href="#" data-bs-toggle="dropdown"> Services </a>
@@ -65,8 +75,8 @@
   <!-- ============= CONTENT ============== --> 
   <div class="container" style="max-width: 720px;padding-bottom: 1500px;">
     <header class="py-4">
-      <b class="text-elite bold-title">About</b> 
-      <h2 class="text-red py-4">This site is under construction</h2>
+      <h1 class="text-elite bold-title">About</h1> 
+      <h2 class="text-red py-1">This site is under construction</h2>
     </header> <!-- section-header.// -->
   </div>
   <!-- ============= CONTENT END// ============== -->
