--- a/two.html
+++ b/two.html
@@ -5,13 +5,19 @@
     <title>brm ---</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <!-- Google fonts -->
+  <!-- Google fonts/icons -->
   <link href="https://fonts.googleapis.com/css?family=Special+Elite&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
   
   <!-- Latest compiled and minified CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 
+    <!-- Local CSS styles  -->
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/brm-logo.css">
+    <link rel="stylesheet" href="css/scroll.css">
+  
   <!-- brm logo styling  -->
   <style>
     .brm-cont-logo {
@@ -118,7 +124,9 @@
     </header>
 
     <nav id="navlist">
-        <b>BRM</b>
+        <b class="text-elite"><a href="index.html" class="py-0"><span class="material-symbols-outlined" style="font-size: 36px;">
+          home
+          </span></a></b>
         <a href="javascript:void(0)">
             <button type="button" class="btn btn-dark"  data-bs-toggle="offcanvas" 
               data-bs-target="#demo">Menu
@@ -165,9 +173,15 @@
             <h1 class="offcanvas-title">BM Online</h1>
             <button type="button" class="btn-close" data-bs-dismiss="offcanvas"></button>
           </div>
-          <div class="offcanvas-body">
-            <p>System down...</p>
-            <button class="btn btn-secondary btn-disabled" type="button">Update</button>
+          <div class="offcanvas-body container py-3 mt-5">
+            <ul class="d-grid gap-2 col-8">
+              <a class="btn btn-dark" href="index.html">Home</a>
+              <a class="btn btn-dark" href="about.html">About</a>
+              <a class="btn btn-dark" href="contacts.html">Contact</a>
+            </ul>
+            
+
+            
           </div>
         </div>
     </div>
