welcome add styling

--- a/contacts.html
+++ b/contacts.html
@@ -29,15 +29,15 @@
 
   <!-- ============= BANNER ============== -->  
   <div class="brm-cont-logo">
-    <b class="text-elite bold-title fs-4 text-red">BRM Contractors</b>
-    <b class="text-elite bold-title fs-4 text-red me-3 float-end">724.787.3758</b>
+    <!-- <b class="text-elite bold-title fs-5 text-red">BRM Contractors</b>
+    <b class="text-elite bold-title fs-5 text-red me-3 float-end">724.787.3758</b> -->
   </div>
   <!-- ============= BANNER END// ============== -->
 
   <!-- ============= NAVBAR ============== -->
-  <nav id="navbar_top" class="navbar navbar-expand-lg navbar-dark bg-red">
+  <nav id="navbar_top" class="navbar navbar-expand-lg navbar-dark bg-red py-1">
   <div class="container">
-    <a class="navbar-brand text-elite py-0" href="index.html"><span class="material-symbols-outlined" style="font-size: 36px;">
+    <a class="navbar-brand text-elite py-0" href="index.html"><span class="material-symbols-outlined" style="font-size: 30px;">
           home
           </span>
     </a>
@@ -49,6 +49,7 @@
     
 
     <ul class="navbar-nav ms-auto">
+      <li class="nav-item"><a class="nav-link" href="welcome.html"> Welcome</a></li>
       <li class="nav-item"><a class="nav-link" href="about.html"> About </a></li>
       <li class="nav-item"><a class="nav-link" href="contacts.html"> Contact</a></li>
       <li class="nav-item dropdown">
@@ -75,7 +76,7 @@
   <div class="container" style="max-width: 720px;padding-bottom: 1500px;">
     <header class="py-4">
       <h1 class="text-elite bold-title">Connect with BRM</h1> 
-      <h2 class="text-red py-1">This site is under construction</h2>
+      <p class="text-red py-1">This site is under construction</p>
     </header> <!-- section-header.// -->
   </div>
   <!-- ============= CONTENT END// ============== -->
@@ -83,7 +84,7 @@
   
   <!-- ============= FOOTER ============== --> 
   <footer class="footer-bar">
-    <p class="h3 text-warning text-center mt-1">BRM Contractors Inc - 724-787-3758</p>
+    <p class="h4 text-warning text-center mt-1">BRM Contractors Inc - 724-787-3758</p>
   </footer>
   <!-- ============= FOOTER END// ============== -->
 
