index edit welcome edit

--- a/index.html
+++ b/index.html
@@ -73,15 +73,15 @@
 
     <!-- ============= CONTENT ============== --> 
     <main>
-      <h1 class="visually-hidden">Heroes examples</h1>
+      <h1 class="visually-hidden">BRM - Full Service - WEB BY BRIAN MCGEE</h1>
     
       <div class="px-4 pt-5 my-5 text-center border-bottom">
         <h1 class="display-4 fw-bold">Your #1 choice in home repair</h1>
         <div class="col-lg-6 mx-auto">
-          <p class="lead mb-4">Chances are if it's broke, we can fixed it. Give us a call today 
+          <p class="lead mb-4">Chances are if it's broke - we can fix it. Give us a call today 
             and one of our technicians will arrive and diagnose the problem. Provide insight 
-            and solution. With over 20 years in the construction industry BRM has you covered. 
-            Licensed and Insured.</p>
+            and a solution. With over 20 years in the construction industry BRM has you covered. 
+            We are a family owned and operated company serving the Western PA area. Licensed and fully insured.</p>
           <div class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-5">
             <button type="button" class="btn btn-secondary btn-lg px-4 me-sm-3">Services</button>
             <button type="button" class="btn btn-outline-secondary btn-lg px-4">Contact BRM</button>
@@ -89,11 +89,42 @@
         </div>
         <div class="overflow-hidden" style="max-height: 30vh;">
           <div class="container px-5">
-            <img src="assets/gallery/roofing-siding.jpg" class="img-fluid border rounded-3 shadow-lg mb-4" alt="Example image" width="700" height="500" loading="lazy">
+            <img src="assets/gallery/siding-corner.jpg" class="img-fluid border rounded-3 shadow-lg mb-4" alt="Example image" width="700" height="500" loading="lazy">
           </div>
         </div>
       </div>
   
+      <div class="b-example-divider"></div>
+
+      <div class="row align-items-md-stretch">
+        <div class="col-md-6">
+          <div class="h-100 p-5 text-white bg-dark rounded-3 text-center">
+            <h2>Quality home repair and maintainence </h2>
+            <p>Keeping up with a property is a lot of work - We can help. BRM can offer solutions
+               for all of your home or business repair and maintenance needs. From bathroom remodeling 
+               to putting in windows or putting up that beautiful deck you always wanted. BRM has you covered. 
+               We even offer hauling, clean up and debris removal. Connect today for a FREE estimate. </p>
+               <div class="text-center">
+                <img src="assets/logo/services.png" class="img-thumbnail" alt="" style="width:100px;">
+               </div>
+  
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="h-100 p-5 bg-light border rounded-3 text-center">
+            <h2>BRM is total service - Licensed and Fully Insured</h2>
+            <p>With over 20 years experience solving home repair problems BRM has you covered. 
+              Chances are if it's broke, we can fix it. Give us a call 
+              today and one of our technicians will arrive and diagnose the problem. 
+              Provide insight and offer a solution. We are at your services. 
+              </p>
+               <div class="text-center">
+                <img src="assets/logo/sheild-handy.jpg" class="img-thumbnail" alt="" style="width:100px;">
+               </div>
+          </div>
+        </div>
+      </div>
+
       <div class="b-example-divider"></div>
   
       <div class="container col-xxl-8 px-4 py-5">
@@ -136,7 +167,7 @@
         <div class="py-5">
           <h1 class="display-5 fw-bold text-white">Quality home building, maintenace and remodel</h1>
           <div class="col-lg-6 mx-auto">
-            <p class="fs-5 mb-4">Chances are if it's broke, we can fixed it. Give us a call 
+            <p class="fs-5 mb-4">Chances are if it's broke, we can fix it. Give us a call 
               today and one of our technicians will arrive and diagnose the problem. 
               Provide insight and solution. With over 20 years in the construction industry
                BRM has you covered. Licensed and Insured.</p>
