--- a/welcome.html
+++ b/welcome.html
@@ -78,42 +78,21 @@
 
   <main style="padding-bottom: 100px;">
     <div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-light">
-      <div class="col-md-5 p-lg-5 mx-auto my-5">
-        <h1 class="display-4 fw-normal">#1 choice in total service home repair</h1>
-        <p class="lead fw-normal">With over 20 years experience solving home repair problems 
-          BRM has you covered. Connect with us today for a FREE estimate.</p>
-        <a class="btn btn-outline-secondary" href="#">Contact Us</a>
+      <div class="col-md-6 p-lg-5 mx-auto my-5">
+        <h1 class="display-4 fw-normal ">Total service building, repair and maintenace contractor</h1>
+        <p class="lead fw-normal"> With over 20 years experience solving home repair problems 
+          BRM has you covered. From bathroom remodeling to trim and carpentry or that
+           beautiful deck you always wanted. BRM has you covered - Connect today for a FREE estimate.</p>
+        
+        <div class="text-center">
+          <img src="assets/logo/sheild-handy.jpg" class="img-thumbnail" alt="" style="width:100px;">
+         </div>
       </div>
       <div class="product-device shadow-sm d-none d-md-block"></div>
       <div class="product-device product-device-2 shadow-sm d-none d-md-block"></div>
     </div>
+
   
-
-    <div class="row align-items-md-stretch">
-      <div class="col-md-6">
-        <div class="h-100 p-5 text-white bg-dark rounded-3">
-          <h2>Quality home repair and maintainence </h2>
-          <p>Keeping up with a propert is a lot of work - BRM can help. We can offer a solution
-             for all your home repair needs. We even offer hauling, clean up and debris removal.  </p>
-             <div class="text-center">
-              <img src="assets/logo/services.png" class="img-thumbnail" alt="" style="width:100px;">
-             </div>
-
-        </div>
-      </div>
-      <div class="col-md-6">
-        <div class="h-100 p-5 bg-light border rounded-3">
-          <h2>Rest assure.. We are Licensed and insured</h2>
-          <p>Chances are if it's broke, we can fixed it. Give us a call 
-            today and one of our technicians will arrive and diagnose the problem. 
-            Provide insight and solution. 
-            </p>
-             <div class="text-center">
-              <img src="assets/logo/handy.jfif" class="img-thumbnail" alt="" style="width:100px;">
-             </div>
-        </div>
-      </div>
-    </div>
 
     
   </main>
