--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@
   <!-- Google fonts -->
   <link href="https://fonts.googleapis.com/css?family=Special+Elite&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-
+  
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
+  
   <!-- Local CSS styles  -->
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="css/brm-logo.css">
@@ -28,6 +32,9 @@
 
 <body>
   <!-- ============= BANNER ============== -->  
+  <div class="block" style="height:30px;">
+    <img src="assets/logo/facebook.jfif" alt="" style="height:30px;padding:0;">
+  </div>
   <div class="brm-cont-logo">
     <!-- <b class="text-elite bold-title fs-3 text-red">BRM Contractors</b>
     <b class="text-elite bold-title fs-3 text-red me-3 float-end">724.787.3758</b> -->
@@ -75,17 +82,17 @@
 
   <header class="masthead">
     <div class="container px-4 px-lg-5 h-100">
-        <div class="row gx-4 gx-lg-5 h-100 align-items-center justify-content-center text-center">
+        <div class="row gx-4 gx-lg-5 h-50 align-items-center justify-content-center text-center">
             <div class="col-lg-8 align-self-end">
-                <h1 class="text-white font-weight-bold">Your one stop for all your Home Repair needs</h1>
+                <h1 class="text-white font-weight-bold text-uppercase text-elite">Excellent choice for all home maintenance and repair solutions</h1>
                 <hr class="divider" />
             </div>
             <div class="col-lg-8 align-self-baseline">
-                <p class="text-white-75 text-white mb-3">Call us today for all your home repair needs. 
+                <p class="text-white-75 text-white mb-5 text-main">Call us today for all your home repair needs. 
                   Whether it be a honey do list to a complete remodel and rebuild, BRM can help! We 
                   offer drywall and painting, wood repair, roofing and siding repair and all sorts 
                   of remodeling.</p>
-                <a class="btn btn-danger bg-red btn-xl" href="services.html">Find Out More</a>
+                <a class="btn btn-danger bg-red btn-xl" href="#about">Find Out More</a>
             </div>
         </div>
     </div>
@@ -101,7 +108,7 @@
       <h1 class="visually-hidden">BRM - Full Service - WEB BY BRIAN MCGEE</h1>
     
       <div class="px-4 pt-5 my-5 text-center border-bottom">
-        <h1 class="display-4 fw-bold">Your #1 choice in home repair</h1>
+        <h1 class="display-4 fw-bold text-elite">Best choice in total home repair</h1>
         <div class="col-lg-6 mx-auto">
           <p class="lead mb-4">Chances are if it's broke - we can fix it. Give us a call today 
             and one of our technicians will arrive and diagnose the problem. Provide insight 
@@ -124,7 +131,7 @@
       <div class="row align-items-md-stretch">
         <div class="col-md-6">
           <div class="h-100 p-5 text-white bg-dark rounded-3 text-center">
-            <h2>Quality home repair and maintainence </h2>
+            <h2 class="text-elite">Quality home repair and maintainence </h2>
             <p>Keeping up with a property is a lot of work - We can help. BRM can offer solutions
                for all of your home or business repair and maintenance needs. From bathroom remodeling 
                to putting in windows or putting up that beautiful deck you always wanted. BRM has you covered. 
@@ -137,7 +144,9 @@
         </div>
         <div class="col-md-6">
           <div class="h-100 p-5 bg-light border rounded-3 text-center">
-            <h2>BRM is total service - Licensed and Fully Insured</h2>
+            <div>
+              <h2 class="text-elite">BRM is total service - Licensed and Fully Insured</h2>
+            </div>
             <p>With over 20 years experience solving home repair problems BRM has you covered. 
               Chances are if it's broke, we can fix it. Give us a call 
               today and one of our technicians will arrive and diagnose the problem. 
@@ -158,7 +167,9 @@
             <img src="assets/gallery/bathroom1.jpg" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="700" height="500" loading="lazy">
           </div>
           <div class="col-lg-6">
-            <h1 class="display-5 fw-bold lh-1 mb-3">We specialize in all sorts of repair and we even remodel bathrooms</h1>
+            <div>
+              <h1 class="display-5 fw-bold lh-1 mb-3 text-elite">We specialize in all sorts of repair and we even remodel bathrooms</h1>
+            </div>
             <p class="lead">We repair all things bathroom! BRM offers installation services for fixtures, lights, plumbing flooring and more. We also offer full bathroom remodel. </p>
             <div class="d-grid gap-2 d-md-flex justify-content-md-start">
               <button type="button" class="btn btn-outline-secondary btn-lg px-4">Connect</button>
@@ -172,7 +183,7 @@
       <div class="container my-5">
         <div class="row p-4 pb-0 pe-lg-0 pt-lg-5 align-items-center rounded-3 border shadow-lg">
           <div class="col-lg-7 p-3 p-lg-5 pt-lg-3">
-            <h1 class="display-4 fw-bold lh-1">Custom decks and patio roof covers</h1>
+            <h1 class="display-4 fw-bold lh-1 text-elite">Custom decks and patio roof covers</h1>
             <p class="lead">We install a variety of custom decks. Let BRM build your perfect outdoor space. 
               Connect with us today for a FREE consultation.</p>
             <div class="d-grid gap-2 d-md-flex justify-content-md-start mb-4 mb-lg-3">
@@ -189,7 +200,7 @@
     
       <div class="bg-dark text-secondary px-4 py-5 text-center">
         <div class="py-5">
-          <h1 class="display-5 fw-bold text-white">Quality home building, maintenace and remodel</h1>
+          <h1 class="display-5 fw-bold text-white text-elite">Quality home building, maintenace and remodel</h1>
           <div class="col-lg-6 mx-auto">
             <p class="fs-5 mb-4">Chances are if it's broke, we can fix it. Give us a call 
               today and one of our technicians will arrive and diagnose the problem. 
