all edits with topbar

--- a/welcome.html
+++ b/welcome.html
@@ -29,9 +29,20 @@
 <body>
 
   <!-- ============= BANNER ============== -->  
+  <div class="block">
+    <div>
+      <a class="btn" href="https://www.facebook.com/profile.php?id=100054525456256">
+        <img src="assets/logo/facebook.jfif" alt="" style="height:40px;padding:0;">
+      </a>
+    </div>
+    <div>
+      <a class="btn btn-outline-warning btn-xl mt-2" href="#about">Connect</a>
+    </div>
+    
+  </div>
   <div class="brm-cont-logo">
-    <!-- <b class="text-elite bold-title fs-5 text-red">BRM Contractors</b>
-    <b class="text-elite bold-title fs-5 text-red me-3 float-end">724.787.3758</b> -->
+    <!-- <b class="text-elite bold-title fs-3 text-red">BRM Contractors</b>
+    <b class="text-elite bold-title fs-3 text-red me-3 float-end">724.787.3758</b> -->
   </div>
   <!-- ============= BANNER END// ============== -->
 
