--- a/index.html
+++ b/index.html
@@ -32,8 +32,17 @@
 
 <body>
   <!-- ============= BANNER ============== -->  
-  <div class="block" style="height:30px;">
-    <img src="assets/logo/facebook.jfif" alt="" style="height:30px;padding:0;">
+  <div class="block">
+    <div>
+      <a class="btn" href="https://www.facebook.com/profile.php?id=100054525456256">
+        <img src="assets/logo/facebook.jfif" alt="" style="height:40px;padding:0;">
+      </a>
+    </div>
+    <div>
+      <a class="btn btn-outline-warning btn-xl mt-2" href="#about">Connect</a>
+    </div>
+     
+    
   </div>
   <div class="brm-cont-logo">
     <!-- <b class="text-elite bold-title fs-3 text-red">BRM Contractors</b>
@@ -84,7 +93,7 @@
     <div class="container px-4 px-lg-5 h-100">
         <div class="row gx-4 gx-lg-5 h-50 align-items-center justify-content-center text-center">
             <div class="col-lg-8 align-self-end">
-                <h1 class="text-white font-weight-bold text-uppercase text-elite">Excellent choice for all home maintenance and repair solutions</h1>
+                <h1 class="text-white font-weight-bold text-uppercase text-elite">Excellent choice all home maintenance and repair solutions</h1>
                 <hr class="divider" />
             </div>
             <div class="col-lg-8 align-self-baseline">
