--- a/about.html
+++ b/about.html
@@ -27,23 +27,23 @@
 
 <body>
 
-  <!-- ============= BANNER ============== -->  
-  <div class="block">
-    <div>
-      <a class="btn" href="https://www.facebook.com/profile.php?id=100054525456256">
-        <img src="assets/logo/facebook.jfif" alt="" style="height:40px;padding:0;">
-      </a>
-    </div>
-    <div>
-      <a class="btn btn-outline-warning btn-xl mt-2" href="#about">Connect</a>
-    </div>
-    
+<!-- ============= BANNER ============== -->  
+<div class="block">
+  <div>
+    <a class="btn" href="https://www.facebook.com/profile.php?id=100054525456256">
+      <img src="assets/logo/facebook.jfif" alt="" style="height:40px;padding:0;">
+    </a>
   </div>
-  <div class="brm-cont-logo">
-    <!-- <b class="text-elite bold-title fs-3 text-red">BRM Contractors</b>
-    <b class="text-elite bold-title fs-3 text-red me-3 float-end">724.787.3758</b> -->
+  <div>
+    <a class="btn btn-outline-warning btn-sm mt-2" href="#about">Connect</a>
   </div>
-  <!-- ============= BANNER END// ============== -->
+  
+</div>
+<div class="brm-cont-logo">
+  <!-- <b class="text-elite bold-title fs-3 text-red">BRM Contractors</b>
+  <b class="text-elite bold-title fs-3 text-red me-3 float-end">724.787.3758</b> -->
+</div>
+<!-- ============= BANNER END// ============== -->
 
   <!-- ============= NAVBAR ============== -->
   <nav id="navbar_top" class="navbar navbar-expand-lg navbar-dark bg-red py-1">
