--- a/index.html
+++ b/index.html
@@ -39,9 +39,8 @@
       </a>
     </div>
     <div>
-      <a class="btn btn-outline-warning btn-xl mt-2" href="#about">Connect</a>
+      <a class="btn btn-outline-warning btn-sm mt-2" href="#about">Connect</a>
     </div>
-     
     
   </div>
   <div class="brm-cont-logo">
@@ -101,7 +100,6 @@
                   Whether it be a honey do list to a complete remodel and rebuild, BRM can help! We 
                   offer drywall and painting, wood repair, roofing and siding repair and all sorts 
                   of remodeling.</p>
-                <a class="btn btn-danger bg-red btn-xl" href="#about">Find Out More</a>
             </div>
         </div>
     </div>
