--- a/contacts.html
+++ b/contacts.html
@@ -35,7 +35,7 @@
     </a>
   </div>
   <div>
-    <a class="btn btn-outline-warning btn-xl mt-2" href="#about">Connect</a>
+    <a class="btn btn-outline-warning btn-sm mt-2" href="#about">Connect</a>
   </div>
   
 </div>
