--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
   <div class="block">
     <div>
       <a class="btn" href="https://www.facebook.com/profile.php?id=100054525456256">
-        <img src="assets/logo/facebook.jfif" alt="" style="height:40px;padding:0;">
+        <img src="assets/logo/facebook.jfif" alt="" style="height:32px;padding:0;">
       </a>
     </div>
     <div>
-      <a class="btn btn-outline-warning btn-sm mt-2" href="#about">Connect</a>
+      <a class="btn btn-outline-warning btn-sm mt-2" href="contacts.html">Connect</a>
     </div>
     
   </div>
@@ -104,7 +104,7 @@
         </div>
     </div>
 </header>
-<div class="block">
+<div class="block-red">
 </div>
 
 <!-- ============= MASTHEAD END// ============== -->
@@ -123,7 +123,7 @@
             We are a family owned and operated company serving the Western PA area. Licensed and fully insured.</p>
           <div class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-5">
             <button type="button" class="btn btn-secondary btn-lg px-4 me-sm-3"><a href="services.html" class="text-white text-decoration">Services</a></button>
-            <button type="button" class="btn btn-secondary btn-lg px-4"><a href="#" class="text-white text-decoration">Contact BRM</a></button>
+            <button type="button" class="btn btn-secondary btn-lg px-4"><a href="contacts.html" class="text-white text-decoration">Contact BRM</a></button>
           </div>
         </div>
         <div class="overflow-hidden" style="max-height: 30vh;">
@@ -144,7 +144,7 @@
                to putting in windows or putting up that beautiful deck you always wanted. BRM has you covered. 
                We even offer hauling, clean up and debris removal. Connect today for a FREE estimate. </p>
                <div class="text-center">
-                <img src="assets/logo/services.png" class="img-thumbnail" alt="" style="width:100px;">
+                <img src="assets/logo/services.png" class="img-thumbnail" alt="Services by BRM" style="width:100px;">
                </div>
   
           </div>
@@ -160,7 +160,7 @@
               Provide insight and offer a solution. We are at your services. 
               </p>
                <div class="text-center">
-                <img src="assets/logo/sheild-handy.jpg" class="img-thumbnail" alt="" style="width:100px;">
+                <img src="assets/logo/sheild-handy.jpg" class="img-thumbnail" alt="Total Service by BRM" style="width:100px;">
                </div>
           </div>
         </div>
@@ -171,16 +171,13 @@
       <div class="container col-xxl-8 px-4 py-5">
         <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
           <div class="col-10 col-sm-8 col-lg-6">
-            <img src="assets/gallery/bathroom1.jpg" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="700" height="500" loading="lazy">
+            <img src="assets/gallery/bathroom1.jpg" class="d-block mx-lg-auto img-fluid" alt="BRM does bathrooms" width="700" height="500" loading="lazy">
           </div>
           <div class="col-lg-6">
             <div>
               <h1 class="display-5 fw-bold lh-1 mb-3 text-elite">We specialize in all sorts of repair and we even remodel bathrooms</h1>
             </div>
             <p class="lead">We repair all things bathroom! BRM offers installation services for fixtures, lights, plumbing flooring and more. We also offer full bathroom remodel. </p>
-            <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-              <button type="button" class="btn btn-outline-secondary btn-lg px-4">Connect</button>
-            </div>
           </div>
         </div>
       </div>
@@ -215,7 +212,8 @@
                BRM has you covered. Licensed and Insured.</p>
             <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
               <a class="btn btn-danger bg-red btn-lg px-4 me-md-2 fw-bold" href="services.html">Services</a>
-              <button type="button" class="btn btn-outline-light btn-lg px-4">Contact BRM</button>
+              <button type="button" class="btn btn-secondary btn-lg px-4"><a href="contacts.html" class="text-white text-decoration">Contact BRM</a></button>
+
             </div>
           </div>
         </div>
