--- a/about.html
+++ b/about.html
@@ -20,6 +20,7 @@
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="css/brm-logo.css">
   <link rel="stylesheet" href="css/scroll.css">
+  <link rel="stylesheet" href="css/masthead.css">
 
   <!-- Local JS scripts -->
   <script src="js/app.js"></script>
@@ -27,23 +28,23 @@
 
 <body>
 
-<!-- ============= BANNER ============== -->  
-<div class="block">
-  <div>
-    <a class="btn" href="https://www.facebook.com/profile.php?id=100054525456256">
-      <img src="assets/logo/facebook.jfif" alt="" style="height:40px;padding:0;">
-    </a>
+  <!-- ============= BANNER ============== -->  
+  <div class="block">
+    <div>
+      <a class="btn" href="https://www.facebook.com/profile.php?id=100054525456256">
+        <img src="assets/logo/facebook.jfif" alt="" style="height:32px;padding:0;">
+      </a>
+    </div>
+    <div>
+      <a class="btn btn-outline-warning btn-sm mt-2" href="#about">Connect</a>
+    </div>
+    
   </div>
-  <div>
-    <a class="btn btn-outline-warning btn-sm mt-2" href="#about">Connect</a>
+  <div class="brm-cont-logo">
+    <!-- <b class="text-elite bold-title fs-3 text-red">BRM Contractors</b>
+    <b class="text-elite bold-title fs-3 text-red me-3 float-end">724.787.3758</b> -->
   </div>
-  
-</div>
-<div class="brm-cont-logo">
-  <!-- <b class="text-elite bold-title fs-3 text-red">BRM Contractors</b>
-  <b class="text-elite bold-title fs-3 text-red me-3 float-end">724.787.3758</b> -->
-</div>
-<!-- ============= BANNER END// ============== -->
+  <!-- ============= BANNER END// ============== -->
 
   <!-- ============= NAVBAR ============== -->
   <nav id="navbar_top" class="navbar navbar-expand-lg navbar-dark bg-red py-1">
