about page general layout

--- a/welcome.html
+++ b/welcome.html
@@ -6,7 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="keywords" content="home repair construciton deck bathroom kitchen drywall paint roofing roof siding fences" />
   <meta name="description" content="BRM - Total Servcie home repair, remodeling and contruction" />  
-  <title>About BRM Contractors</title>
+  <title>Welcome to BRM Contractors</title>
+  <link rel="icon" href="assets/logo/brm-ico.png" sizes="32x32" />
 
   <!-- Latest compiled and minified CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
@@ -36,7 +37,7 @@
     </a>
   </div>
   <div>
-    <a class="btn btn-outline-warning btn-sm mt-2" href="#about">Connect</a>
+    <a class="btn btn-outline-warning btn-sm mt-2" href="contacts.html">Connect</a>
   </div>
   
 </div>
