--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
 
+<!-- website by brian mcgee ---  www.brmdev.com -->
+
 <!DOCTYPE HTML>
 <html lang="en">
 <head>
@@ -7,6 +9,7 @@
   <meta name="keywords" content="home repair construciton deck bathroom kitchen drywall paint roofing roof siding fences" />
   <meta name="description" content="BRM - Total Servcie home repair, remodeling and contruction" />  
   <title>BRM Contractors Inc</title>
+  <link rel="icon" href="assets/logo/brm-ico.png" sizes="32x32" />
 
   <!-- Latest compiled and minified CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
@@ -17,8 +20,8 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
   
   <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
   
   <!-- Local CSS styles  -->
   <link rel="stylesheet" href="css/styles.css">
@@ -67,7 +70,7 @@
       <li class="nav-item"><a class="nav-link" href="about.html"> About </a></li>
       <li class="nav-item"><a class="nav-link" href="contacts.html"> Contact</a></li>
       <li class="nav-item dropdown">
-        <a class="nav-link  dropdown-toggle" href="#" data-bs-toggle="dropdown"> Services </a>
+        <a class="nav-link  dropdown-toggle" href="#" data-bs-toggle="dropdown"> More Services </a>
           <ul class="dropdown-menu dropdown-menu-right">
             <li><a class="dropdown-item" href="#"> Custom Decks </a></li>
                 <li><a class="dropdown-item" href="#"> Bathroom Remodel </a></li>
@@ -195,7 +198,7 @@
             </div>
           </div>
           <div class="col-lg-4 offset-lg-1 p-0 overflow-hidden shadow-lg">
-              <img class="rounded-lg-3" src="assets/gallery/custom-deck.jpg" alt="" width="720">
+              <img class="rounded-lg-3" src="assets/gallery/deck.jpg" alt="" width="720">
           </div>
         </div>
       </div>
