--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
   <!-- Google fonts -->
   <link href="https://fonts.googleapis.com/css?family=Special+Elite&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+
+  <!-- font awesome -->
+  <script src="https://kit.fontawesome.com/8ab1cf7876.js" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="https://kit.fontawesome.com/8ab1cf7876.css" crossorigin="anonymous"> 
   
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -55,9 +59,8 @@
   <!-- ============= NAVBAR ============== -->
   <nav id="navbar_top" class="navbar navbar-expand-lg navbar-dark bg-red py-1">
   <div class="container">
-    <a class="navbar-brand text-elite py-0" href="index.html"><span class="material-symbols-outlined" style="font-size: 30px;">
-          home
-          </span>
+    <a class="navbar-brand text-elite py-0 " href="index.html">
+      <i class="fa-solid fa-house h3 mt-2"></i>
     </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" 
         data-bs-target="#main_nav"  aria-expanded="false" aria-label="Toggle navigation">
@@ -78,7 +81,6 @@
                 <li><a class="dropdown-item" href="#"> Roofing </a></li>
                 <li><a class="dropdown-item" href="#"> Siding </a></li>
                 <li><a class="dropdown-item" href="#"> Handyman and Repair </a></li>
-                <li><a class="dropdown-item" href="two.html"> Design 2 </a></li>
           </ul>
       </li>
     </ul>
