--- a/services.html
+++ b/services.html
@@ -17,6 +17,10 @@
   <link href="https://fonts.googleapis.com/css?family=Special+Elite&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 
+  <!-- font awesome -->
+  <script src="https://kit.fontawesome.com/8ab1cf7876.js" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="https://kit.fontawesome.com/8ab1cf7876.css" crossorigin="anonymous"> 
+
   <!-- Local CSS styles  -->
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="css/brm-logo.css">
@@ -50,41 +54,37 @@
 
   <!-- ============= NAVBAR ============== -->
   <nav id="navbar_top" class="navbar navbar-expand-lg navbar-dark bg-red py-1">
-  <div class="container">
-    <a class="navbar-brand text-elite py-0" href="index.html"><span class="material-symbols-outlined" style="font-size: 30px;">
-          home
-          </span>
-    </a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" 
-        data-bs-target="#main_nav"  aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="main_nav">
-    
-
-    <ul class="navbar-nav ms-auto">
-      <li class="nav-item"><a class="nav-link" href="services.html"> Services</a></li>
-      <li class="nav-item"><a class="nav-link" href="about.html"> About </a></li>
-      <li class="nav-item"><a class="nav-link" href="contacts.html"> Contact</a></li>
+    <div class="container">
+      <a class="navbar-brand text-elite py-0 " href="index.html">
+        <i class="fa-solid fa-house h3 mt-2"></i>
+      </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" 
+          data-bs-target="#main_nav"  aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="main_nav">
       
-      <li class="nav-item dropdown">
-        <a class="nav-link  dropdown-toggle" href="#" data-bs-toggle="dropdown"> More Services </a>
-          <ul class="dropdown-menu dropdown-menu-right">
-            <li><a class="dropdown-item" href="#"> Custom Decks </a></li>
-                <li><a class="dropdown-item" href="#"> Bathroom Remodel </a></li>
-                <li><a class="dropdown-item" href="#"> Kitchen Remodel </a></li>
-                <li><a class="dropdown-item" href="#"> Roofing </a></li>
-                <li><a class="dropdown-item" href="#"> Siding </a></li>
-                <li><a class="dropdown-item" href="#"> Handyman and Repair </a></li>
-                <li><a class="dropdown-item" href="two.html"> Design 2 </a></li>
-          </ul>
-      </li>
-    </ul>
-
-    </div> <!-- navbar-collapse.// -->
-  </div> <!-- container-fluid.// -->
-  </nav>
-  <!-- ============= NAVBAR END// ============== -->
+      <ul class="navbar-nav ms-auto">
+        <li class="nav-item"><a class="nav-link" href="services.html"> Services</a></li>
+        <li class="nav-item"><a class="nav-link" href="about.html"> About </a></li>
+        <li class="nav-item"><a class="nav-link" href="contacts.html"> Contact</a></li>
+        <li class="nav-item dropdown">
+          <a class="nav-link  dropdown-toggle" href="#" data-bs-toggle="dropdown"> More Services </a>
+            <ul class="dropdown-menu dropdown-menu-right">
+              <li><a class="dropdown-item" href="#"> Custom Decks </a></li>
+                  <li><a class="dropdown-item" href="#"> Bathroom Remodel </a></li>
+                  <li><a class="dropdown-item" href="#"> Kitchen Remodel </a></li>
+                  <li><a class="dropdown-item" href="#"> Roofing </a></li>
+                  <li><a class="dropdown-item" href="#"> Siding </a></li>
+                  <li><a class="dropdown-item" href="#"> Handyman and Repair </a></li>
+            </ul>
+        </li>
+      </ul>
+  
+      </div> <!-- navbar-collapse.// -->
+    </div> <!-- container-fluid.// -->
+    </nav>
+    <!-- ============= NAVBAR END// ============== -->
 
 
 
