--- a/welcome.html
+++ b/welcome.html
@@ -37,7 +37,7 @@
 <div class="block">
   <div>
     <a class="btn" href="https://www.facebook.com/profile.php?id=100054525456256">
-      <img src="assets/logo/facebook.jfif" alt="" style="height:32px;padding:0;">
+      <img src="assets/logo/facebook.jfif" alt="BRM @ Facebook">
     </a>
   </div>
   <div>
