updated hero section with styles

--- a/about.html
+++ b/about.html
@@ -26,6 +26,7 @@
   <link rel="stylesheet" href="css/brm-logo.css">
   <link rel="stylesheet" href="css/scroll.css">
   <link rel="stylesheet" href="css/masthead.css">
+  <link rel="stylesheet" href="css/hero.css">
 
   <!-- Local JS scripts -->
   <script src="js/apps.js"></script>
@@ -112,19 +113,18 @@
 <div class="wrapper" style="padding-bottom: 50px;">
 
   <!-- ============= CONTENT ============== --> 
-
+          <!-- ============= HERO ==================== -->
+          <section id="hero">
+            <div class="hero-container" style="margin:0px;padding:0px;">
+              <h1>Total Service</h1>
+              <h2>BRM is a family owned and operated company with over 20 years experience building, repairs and maintenance serving the Western PA area</h2>
+              <a href="contacts.html" class="btn-get-started scrollto text-decoration">Connect with BRM</a>
+            </div>
+          </section>
+          <!-- ============= HERO END// ============== -->
   
   <hr class="divider bg-danger" />
   
-  <main style="padding-bottom: 10px;"> 
-    <div class="bg-light text-dark px-4 py-5 text-center">
-      <div class="py-5">
-        <h1 class="display-3 fw-bold text-dark text-elite">About BRM </h1>
-        <div class="col-lg-6 mx-auto">
-          <p class="fs-5 mb-4">A family owned and operated company servicing the Western PA area.</p>
-        </div>
-      </div>
-  </div>
   
   <div class="container-sm">
     <div class="row">
@@ -186,14 +186,20 @@
         </div> 
       </div>
       <div class="col-md-6 order-md-1">
-        <div class="h-100 p-5 bg-dark border rounded-3 text-center">
+        <div class="h-100 p-5 bg-light border rounded-3 text-center">
           <div class="mb-5">
             <a class="btn" href="https://www.facebook.com/profile.php?id=100054525456256">
               <img src="assets/logo/facebook.jfif" alt="BRM @ Facebook" class="rounded img-thumbnail" style="width:90px;">
             </a>
           </div>
           <div>
-            <h2 class="text-elite text-light text-uppercase">Connect with us on Facebook</h2><br>
+            <h2 class="text-elite text-primary text-uppercase">Connect with us on Facebook</h2><br>
+          </div>
+          <br><br><br><br>
+          <div class="mb-5">
+            <a class="btn" href="https://www.facebook.com/profile.php?id=100054525456256">
+              <img src="assets/logo/brm-new.png" alt="BRM @ Facebook" class="rounded img-thumbnail mx-auto" style="width:200px;">
+            </a>
           </div>
        
         </div>
@@ -210,29 +216,7 @@
   <!-- ============ CONTENT END// ============== --> 
   
 
-  <!-- ============= MASTHEAD ================= -->
-
-  <div class="block-red"></div>
-
-  <header class="masthead">
-    <div class="container px-4 px-lg-5 h-100">
-        <div class="row gx-4 gx-lg-5 h-50 align-items-center justify-content-center text-center">
-            <div class="col-lg-8 align-self-end">
-                <h1 class="text-white font-weight-bold text-uppercase text-elite">Excellent choice all home maintenance and repair solutions</h1>
-                <hr class="divider" />
-            </div>
-            <div class="col-lg-8 align-self-baseline">
-                <p class="text-white-75 text-white mb-5 text-main">Call us today for all your home repair needs. 
-                  Whether it be a honey do list to a complete remodel and rebuild, BRM can help! We 
-                  offer drywall and painting, wood repair, roofing and siding repair and all sorts 
-                  of remodeling.</p>
-            </div>
-        </div>
-    </div>
-  </header>
-  <div class="block-red"></div>
-
-<!-- ============ MASTHEAD END// ============= -->
+  
 
 </div>
 
@@ -242,12 +226,13 @@
 
 
   
-<!-- ============= FOOTER ============== --> 
-  <footer class="footer-bar">
-    <p class="h4 text-warning text-center mt-1">BRM Contractors Inc - 724-787-3758</p>
-  </footer>
+<footer class="footer-bar">
+  
+  <p class="text-warning text-center mt-2"> Phone - 724-787-3758 <span><a class="navbar-brand text-elite py-0" href="index.html">
+    <i class="fa-solid fa-house h3 mt-2 ms-5"></i>
+  </a></span></p>
+</footer>
 <!-- ============= FOOTER END// ============== -->
-
 
 
 </body>
