--- a/contacts.html
+++ b/contacts.html
@@ -26,6 +26,7 @@
   <link rel="stylesheet" href="css/brm-logo.css">
   <link rel="stylesheet" href="css/scroll.css">
   <link rel="stylesheet" href="css/masthead.css">
+  <link rel="stylesheet" href="css/hero.css">
 
   <!-- Local JS scripts -->
   <script src="js/apps.js"></script>
@@ -134,6 +135,16 @@
   
 <div class="wrapper">
 
+  <!-- ============= HERO ==================== -->
+    <section id="hero" style="height:30vh;">
+      <div class="hero-container" style="margin:0px;padding:0px;">
+        <h1>CONNECT WITH BRM</h1>
+        <h2>BRM is total service repair and remodeling</h2>
+        <a href="contacts.html" class="btn-get-started scrollto text-decoration">Connect with BRM</a>
+      </div>
+    </section>
+  <!-- ============= HERO END// ============== -->
+
  <!-- ============= CONTENT =================== --> 
  
  <div class="container" style="max-width: 720px;">
@@ -208,28 +219,15 @@
 
 
 
-<!-- ============= MASTHEAD ================== -->
-
-<div class="block-red"> </div>
-<header class="masthead">
-    <div class="container px-4 px-lg-5 h-100">
-        <div class="row gx-4 gx-lg-5 h-50 align-items-center justify-content-center text-center">
-            <div class="col-lg-8 align-self-end">
-                <h1 class="text-white font-weight-bold text-uppercase text-elite">Excellent choice all home maintenance and repair solutions</h1>
-                <hr class="divider" />
-            </div>
-            <div class="col-lg-8 align-self-baseline">
-                <p class="text-white-75 text-white mb-5 text-main">Call us today for all your home repair needs. 
-                  Whether it be a honey do list to a complete remodel and rebuild, BRM can help! We 
-                  offer drywall and painting, wood repair, roofing and siding repair and all sorts 
-                  of remodeling.</p>
-            </div>
-        </div>
+  <!-- ============= HERO ==================== -->
+  <section id="hero" style="height:40vh;border-top:50px solid rgb(163,30,30);">
+    <div class="hero-container" style="margin:0px;margin-top:100px;padding-bottom:300px;">
+      <h1>Connect today</h1>
+      <h2>BRM is total service repair and remodeling</h2>
+      <a href="contacts.html" class="btn-get-started scrollto text-decoration">Connect with BRM</a>
     </div>
-</header>
-<div class="block-red mb-5"> </div>
-
-<!-- =========== MASTHEAD END// ============== -->
+  </section>
+<!-- ============= HERO END// ============== -->
 
 </div> 
 
@@ -238,14 +236,13 @@
 
 
 
-<!-- =============== FOOTER ================== --> 
-
-  <footer class="footer-bar">
-    <p class="h4 text-warning text-center mt-1">BRM Contractors Inc - 724-787-3758</p>
-  </footer>
-
-<!-- ============== FOOTER END// ============== -->
-
+<footer class="footer-bar">
+  
+  <p class="text-warning text-center mt-2"> Phone - 724-787-3758 <span><a class="navbar-brand text-elite py-0" href="index.html">
+    <i class="fa-solid fa-house h3 mt-2 ms-5"></i>
+  </a></span></p>
+</footer>
+<!-- ============= FOOTER END// ============== -->
 
 
 </body>
