--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"crossorigin="anonymous"></script>
 
   <!-- Google fonts -->
-  <!-- <link href="https://fonts.googleapis.com/css?family=Special+Elite&display=swap" rel="stylesheet"> -->
+  <link href="https://fonts.googleapis.com/css?family=Special+Elite&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 
   <!-- Font awesome -->
@@ -33,10 +33,19 @@
   <link rel="stylesheet" href="css/brm-logo.css">
   <link rel="stylesheet" href="css/scroll.css">
   <link rel="stylesheet" href="css/masthead.css">
+  <link rel="stylesheet" href="css/hero-main.css">
 
   <!-- Local JS scripts -->
   <script src="js/apps.js"></script>
 
+
+
+  <!-- logo size reboot -->
+<style>
+  .logo {
+    height: 90vh;
+  }
+</style>
 </head>
 
 <body>
@@ -58,9 +67,23 @@
       <!-- <b class="text-elite bold-title fs-3 text-red">BRM Contractors</b>
       <b class="text-elite bold-title fs-3 text-red me-3 float-end">724.787.3758</b> -->
     </div>
+
+      <!-- ============= HERO ==================== -->
+        <section id="hero">
+          <div class="hero-container" style="margin:0px;padding:0px;">
+            <h1>EXCELLENT CHOICE MAINTENANCE AND REPAIR SOLUTIONS</h1>
+            <h2>Whether it be a honey do list to a complete remodel and rebuild, BRM can help! We offer drywall and painting, wood repair, roofing and siding repair and all sorts of remodeling. </h2>
+            <a href="contacts.html" class="btn-get-started scrollto text-decoration">Connect with BRM</a>
+          </div>
+        </section>
+      <!-- ============= HERO END// ============== -->
+
   </div>
 
   <!-- ============= BANNER END// ============== -->
+
+
+
 
   <!-- ============= NAVBAR ==================== -->
   
@@ -103,34 +126,12 @@
   <!-- ============= NAVBAR END// ============== -->
 
 
+
+
   <!-- =============== WRAPPER ================ -->
   <div class="wrapper">
 
-    <!-- ============= MASTHEAD++++ ============== -->
-
-  <header class="masthead">
-    <div class="container px-4 px-lg-5 h-100">
-        <div class="row gx-4 gx-lg-5 h-50 align-items-center justify-content-center text-center">
-            <div class="col-lg-8 align-self-end">
-                <h1 class="text-white font-weight-bold text-uppercase text-elite">Excellent choice all home maintenance and repair solutions</h1>
-                <hr class="divider" />
-            </div>
-            <div class="col-lg-8 align-self-baseline">
-                <p class="text-white-75 text-white mb-5 text-main">Call us today for all your home repair needs. 
-                  Whether it be a honey do list to a complete remodel and rebuild, BRM can help! We 
-                  offer drywall and painting, wood repair, roofing and siding repair and all sorts 
-                  of remodeling.</p>
-            </div>
-        </div>
-    </div>
-</header>
-<div class="block-red">
-</div>
-
-<!-- ============= MASTHEAD END// ============== -->
-
-
-<!-- ============= CONTENT ==================== --> 
+   <!-- ============= CONTENT ==================== --> 
     <main>
       <h1 class="visually-hidden">BRM - Full Service - WEB BY BRIAN MCGEE</h1>
     
@@ -215,7 +216,7 @@
             </div>
           </div>
           <div class="col-lg-4 offset-lg-1 p-0 overflow-hidden shadow-lg">
-              <img class="rounded-lg-3" src="assets/gallery/deck.jpg" alt="" width="720">
+              <img class="rounded-lg-3" src="assets/gallery/deck.jpg" alt="Decks by BRM" width="320" height="400">
           </div>
         </div>
       </div>
@@ -241,15 +242,19 @@
     
       <div class="b-example-divider mb-0"></div>
     </main>
-<!-- ============= CONTENT END// ============== -->
+   <!-- ============= CONTENT END// ============== -->
 
-  </div>
+  </div> 
   <!-- =============== WRAPPER END//============ -->
+  
   
 <!-- ============= FOOTER ===================== --> 
 
 <footer class="footer-bar">
-  <p class="h4 text-warning text-center mt-1">BRM Contractors Inc - 724-787-3758</p>
+  
+  <p class="text-warning text-center mt-2"> Phone - 724-787-3758 <span><a class="navbar-brand text-elite py-0" href="index.html">
+    <i class="fa-solid fa-house h3 mt-2 ms-5"></i>
+  </a></span></p>
 </footer>
 <!-- ============= FOOTER END// ============== -->
 
