--- a/services.html
+++ b/services.html
@@ -26,9 +26,11 @@
   <link rel="stylesheet" href="css/brm-logo.css">
   <link rel="stylesheet" href="css/scroll.css">
   <link rel="stylesheet" href="css/masthead.css">
+  <link rel="stylesheet" href="css/hero.css">
 
   <!-- Local JS scripts -->
   <script src="js/apps.js"></script>
+
 
 </head>
 
@@ -107,6 +109,17 @@
 
   <!-- ============= CONTENT ==================== --> 
 
+    <!-- ============= HERO ==================== -->
+      <section id="hero">
+        <div class="hero-container" style="margin:0px;padding:0px;">
+          <h1>Services</h1>
+          <h2>Chances are if it's broke we can fix it. We are full service.</h2>
+          <a href="contacts.html" class="btn-get-started scrollto text-decoration">Connect with BRM</a>
+        </div>
+      </section>
+      <!-- ============= HERO END// ============== -->
+
+
 <main style="padding-bottom: 100px;">
 
 
@@ -174,7 +187,7 @@
   </div>
 
 
-  <div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-light">
+  <div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-dark text-light">
     <div class="col-md-6 p-lg-5 mx-auto my-5">
       <h1 class="display-6 fw-normal ">BRM is your 1st choice for all home maintenance and repair solutions.</p>
       
@@ -195,39 +208,17 @@
   <!-- ============= CONTENT END// ============== -->
 
 
-
-<!-- ============= MASTHEAD++++ ============== -->
-
-    <header class="masthead">
-      <div class="container px-4 px-lg-5 h-100">
-          <div class="row gx-4 gx-lg-5 h-50 align-items-center justify-content-center text-center">
-              <div class="col-lg-8 align-self-end">
-                  <h1 class="text-white font-weight-bold text-uppercase text-elite">Excellent choice all home maintenance and repair solutions</h1>
-                  <hr class="divider" />
-              </div>
-              <div class="col-lg-8 align-self-baseline">
-                  <p class="text-white-75 text-white mb-5 text-main">Call us today for all your home repair needs. 
-                    Whether it be a honey do list to a complete remodel and rebuild, BRM can help! We 
-                    offer drywall and painting, wood repair, roofing and siding repair and all sorts 
-                    of remodeling.</p>
-              </div>
-          </div>
-      </div>
-  </header>
-  <div class="block-red">
-  </div>
-  
-<!-- ============= MASTHEAD END// ============== -->
-
 </div>
 
 <!-- ============ WRAPPER END// =============== --> 
   
   
-<!-- ============= FOOTER ============== --> 
-  <footer class="footer-bar">
-    <p class="h4 text-warning text-center mt-1">BRM Contractors Inc - 724-787-3758</p>
-  </footer>
+<footer class="footer-bar">
+  
+  <p class="text-warning text-center mt-2"> Phone - 724-787-3758 <span><a class="navbar-brand text-elite py-0" href="index.html">
+    <i class="fa-solid fa-house h3 mt-2 ms-5"></i>
+  </a></span></p>
+</footer>
 <!-- ============= FOOTER END// ============== -->
 
 
