--- a/contacts.html
+++ b/contacts.html
@@ -121,8 +121,8 @@
         </li>
       </ul>
   
-      </div> <!-- navbar-collapse.// -->
-    </div> <!-- container-fluid.// -->
+      </div> 
+    </div> 
   </nav>
 
 </div>
