--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   <!-- logo size reboot -->
 <style>
   .logo {
-    height: 90vh;
+    height: 88vh;
   }
 </style>
 </head>
@@ -117,8 +117,8 @@
           </li>
         </ul>
     
-        </div> <!-- navbar-collapse.// -->
-      </div> <!-- container-fluid.// -->
+        </div> 
+      </div> 
       </nav>
 
   </div>
@@ -149,7 +149,7 @@
         </div>
         <div class="overflow-hidden" style="max-height: 30vh;">
           <div class="container px-5">
-            <img src="assets/gallery/siding-corner.jpg" class="img-fluid border rounded-3 shadow-lg mb-4" alt="Example image" width="700" height="500" loading="lazy">
+            <img src="assets/gallery/siding-corner.jpg" class="img-fluid border rounded-3 shadow-lg mb-4" alt="Siding install by BRM" width="700" height="500" loading="lazy">
           </div>
         </div>
       </div>
