--- a/services.html
+++ b/services.html
@@ -93,8 +93,8 @@
         </li>
       </ul>
   
-      </div> <!-- navbar-collapse.// -->
-    </div> <!-- container-fluid.// -->
+      </div> 
+    </div> 
   </nav>
 </div>
 
