--- a/about.html
+++ b/about.html
@@ -96,8 +96,8 @@
         </li>
       </ul>
   
-      </div> <!-- navbar-collapse.// -->
-    </div> <!-- container-fluid.// -->
+      </div> 
+    </div> 
    </nav>
 
 </div>
