--- a/template.html
+++ b/template.html
@@ -10,6 +10,10 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"crossorigin="anonymous"></script>
 
+<!-- Google fonts -->
+<link href="https://fonts.googleapis.com/css?family=Special+Elite&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+
 
 <link rel="stylesheet" href="temp.css">
 <link rel="stylesheet" href="css/hero-main.css">
@@ -24,13 +28,29 @@
 <body>
 
 
-<div class="banner"></div>
+<div class="banner">
+  <div class="banner-bar">
+
+  </div>
+  <div class="row">
+    <div class="col-sm" id="bannerImg1">
+      <img class="rounded mx-auto d-block" src="assets/logo/brm.jpg" style="width:250px" alt="BRM Contractors Inc">
+    </div>
+    <div class="col-sm" id="bannerImg2">
+      <img class="rounded mx-auto d-block" src="assets/logo/free-estimate.png" style="width:250px" alt="Free Estimate by BRM">
+    </div>
+  </div>
+
+
+</div>
 
 <div class="nav-bar" id="navBar">
  
   <nav class="navbar navbar-expand-lg navbar-light bg-main">
-    <a class="navbar-brand" href="#">BRM</a>
-    <button class="navbar-toggler me-2 btn-nav" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <a class="navbar-brand" href="#">
+      <img class="ms-2 rounded" src="assets/logo/brm-ico.png" alt="BRM">
+    </a>
+    <a class="navbar-toggler me-2 " type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="menu-icon" onclick="iconSwap(this)">
         <div class="menu-icon">
           <div class="bar1"></div>
@@ -38,26 +58,39 @@
           <div class="bar3"></div>
         </div>
       </span>
-    </button>
+    </a>
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="#">About <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="#">Home <span class="sr-only"></span></a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Contact</a>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            About Us
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <a class="dropdown-item" href="#">About BRM</a>
+            <a class="dropdown-item" href="#">Contact Info</a>
+          </div>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Services
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="#">Action</a>
-            <a class="dropdown-item" href="#">Another action</a>
+            <a class="dropdown-item" href="#">Drywall and Painting</a>
+            <a class="dropdown-item" href="#">Custom Decks</a>
+            <a class="dropdown-item" href="#">Bathroom Remodel</a>
+            <a class="dropdown-item" href="#">Kitchen Remodel</a>
+            <a class="dropdown-item" href="#">Handyman Services</a>
             <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="#">Something else here</a>
+            <a class="dropdown-item" href="#">
+              <button class="btn btn-outline-dark">Schedule</button> </a>
           </div>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Contact Us</a>
         </li>
     </div>
   </nav>
@@ -65,15 +98,15 @@
 </div> 
 
 <div class="wrapper">
-  <!-- ============= HERO ==================== -->
+ <!-- ============= HERO ==================== -->
   <section id="hero">
-    <div class="hero-container" style="margin:0px;padding:0px;">
+    <div class="hero-container">
       <h1>EXCELLENT CHOICE MAINTENANCE AND REPAIR SOLUTIONS</h1>
       <h2>Whether it be a honey do list to a complete remodel and rebuild, BRM can help! We offer drywall and painting, wood repair, roofing and siding repair and all sorts of remodeling. </h2>
       <a href="contacts.html" class="btn-get-started scrollto text-decoration">Connect with BRM</a>
     </div>
   </section>
-<!-- ============= HERO END// ============== -->
+ <!-- ============= HERO END// ============== -->
 
 
 
@@ -104,7 +137,7 @@
           document.getElementById('navBar').classList.add('fixed-top');
                 // add padding top to show content behind navbar
           let navBarHeight = document.querySelector('.nav-bar').offsetHeight;
-          document.body.style.paddingTop = navBarHeight + 'px';
+          document.body.style.paddingTop = (navBarHeight - 3) + 'px';
         } else {
           document.getElementById('navBar').classList.remove('fixed-top');
                 // remove padding top from body
