fix nav on mobile?

--- a/template.html
+++ b/template.html
@@ -99,13 +99,13 @@
 
 <div class="wrapper row">
  <!-- ============= HERO ==================== -->
-  <section id="hero">
+  <!-- <section id="hero">
     <div class="hero-container">
       <h1>EXCELLENT CHOICE MAINTENANCE AND REPAIR SOLUTIONS</h1>
       <h2>Whether it be a honey do list to a complete remodel and rebuild, BRM can help! We offer drywall and painting, wood repair, roofing and siding repair and all sorts of remodeling. </h2>
       <a href="contacts.html" class="btn-get-started scrollto text-decoration">Connect with BRM</a>
     </div>
-  </section>
+  </section> -->
  <!-- ============= HERO END// ============== -->
 </div>
 
