nav bug fix masthead add

--- a/index.html
+++ b/index.html
@@ -96,14 +96,14 @@
 <div class="wrapper row">
 
  
- <div class="masthead container-fluid">
+ <div class="masthead">
    <div class="masthead-container">
-    <h2>Total service</h2>
-    <h1>Excellent Choice</h1>
-    <h2>Whether it be a honey do list to a complete remodel and rebuild, BRM can help! We offer drywall and painting, wood repair, roofing and siding repair and all sorts of remodeling. </h2>
+    <h3 class="text-roboto">Quality craftsmanship</h3>
+    <h1 class="text-roboto">Excellent Service</h1>
+    <h2>BRM offer drywall and painting, wood repair, roofing and siding repair and all sorts of remodeling. </h2>
     <a href="#contacts.html" class="btn-outline-red">FREE ESTIMATE</a>
     <div class="block-text">
-      <p>Quality home repair</p>
+      <p>Total home repair</p>
     </div>
   </div>
  </div>
