--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
   <div class="banner-bar"></div>
   <div class="container-fluid row">
     <div class="col-sm" id="bannerImg1">
-      <img class="rounded mx-auto d-block" src="assets/logo/brm.jpg" style="width:250px" alt="BRM Contractors Inc">
+      <img class="rounded mx-auto d-block" src="assets/logo/brm.jpg" style="width:210px" alt="BRM Contractors Inc">
     </div>
     <div class="col-sm" id="bannerImg2">
-      <img class="rounded mx-auto d-block" src="assets/logo/free-estimate.png" style="width:250px" alt="Free Estimate by BRM">
+      <img class="rounded mx-auto d-block" src="assets/logo/free-estimate.png" style="width:210px" alt="Free Estimate by BRM">
     </div>
   </div>
 </div>
@@ -98,9 +98,9 @@
  
  <div class="masthead">
    <div class="masthead-container">
-    <h3 class="text-roboto">Quality craftsmanship</h3>
-    <h1 class="text-roboto">Excellent Service</h1>
-    <h2>BRM offer drywall and painting, wood repair, roofing and siding repair and all sorts of remodeling. </h2>
+    <h3>Quality craftsmanship</h3>
+    <h1>Excellent Service</h1>
+    <h2>Drywall and painting, wood repair, roofing and siding repair and all sorts of remodeling. </h2>
     <a href="#contacts.html" class="btn-outline-red">FREE ESTIMATE</a>
     <div class="block-text">
       <p>Total home repair</p>
