contact page edit

--- a/template.html
+++ b/template.html
@@ -28,10 +28,10 @@
   <div class="banner-bar"></div>
   <div class="container-fluid row">
     <div class="col-sm" id="bannerImg1">
-      <img class="rounded mx-auto d-block" src="assets/logo/brm.jpg" style="width:250px" alt="BRM Contractors Inc">
+      <img class="rounded mx-auto d-block" src="assets/logo/brm.jpg" style="width:210px" alt="BRM Contractors Inc">
     </div>
     <div class="col-sm" id="bannerImg2">
-      <img class="rounded mx-auto d-block" src="assets/logo/free-estimate.png" style="width:250px" alt="Free Estimate by BRM">
+      <img class="rounded mx-auto d-block" src="assets/logo/free-estimate.png" style="width:210px" alt="Free Estimate by BRM">
     </div>
   </div>
 </div>
@@ -65,7 +65,7 @@
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
             <a class="dropdown-item" href="about.html">About BRM</a>
-            <a class="dropdown-item" href="contacts.html">Contact Info</a>
+            <a class="dropdown-item" href="contact-brm.html">Contact Info</a>
           </div>
         </li>
         <li class="nav-item dropdown">
@@ -84,7 +84,7 @@
           </div>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="contacts.html">Contact Us</a>
+          <a class="nav-link" href="contact-brm.html">Contact Us</a>
         </li>
     </div>
   </nav>
@@ -96,18 +96,18 @@
 <div class="wrapper row">
 
  
- <!-- <div class="masthead container-fluid">
+ <div class="masthead">
    <div class="masthead-container">
-    <h2>Total service</h2>
-    <h1>Excellent Choice Home Repair</h1>
-    <h2>Whether it be a honey do list to a complete remodel and rebuild, BRM can help! We offer drywall and painting, wood repair, roofing and siding repair and all sorts of remodeling. </h2>
-    <a href="#contacts.html" class="btn-outline-red">FREE ESTIMATE</a>
+    <h3>Quality craftsmanship</h3>
+    <h1>Excellent Service</h1>
+    <h2>Drywall and painting, wood repair, roofing and siding repair and all sorts of remodeling. </h2>
+    <a href="contact-brm.html" class="btn-outline-red">FREE ESTIMATE</a>
     <div class="block-text">
-      <p>Quality home repair</p>
+      <p>Total home repair</p>
     </div>
   </div>
  </div>
-</div> -->
+</div>
 <!-- =========== WRAPPER END/========== -->
 
 <!-- ============ FOOTER ============= -->
