--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="#">Home <span class="sr-only"></span></a>
+          <a class="nav-link" href="index.html">Home <span class="sr-only"></span></a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#about.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -65,7 +65,7 @@
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
             <a class="dropdown-item" href="about.html">About BRM</a>
-            <a class="dropdown-item" href="contacts.html">Contact Info</a>
+            <a class="dropdown-item" href="contact-brm.html">Contact Info</a>
           </div>
         </li>
         <li class="nav-item dropdown">
@@ -84,7 +84,7 @@
           </div>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="contacts.html">Contact Us</a>
+          <a class="nav-link" href="contact-brm.html">Contact Us</a>
         </li>
     </div>
   </nav>
@@ -101,7 +101,7 @@
     <h3>Quality craftsmanship</h3>
     <h1>Excellent Service</h1>
     <h2>Drywall and painting, wood repair, roofing and siding repair and all sorts of remodeling. </h2>
-    <a href="#contacts.html" class="btn-outline-red">FREE ESTIMATE</a>
+    <a href="contact-brm.html" class="btn-outline-red">FREE ESTIMATE</a>
     <div class="block-text">
       <p>Total home repair</p>
     </div>
