updated margins at mobile nav

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 <!-- ============ BANNER ============= -->
 <div class="banner" id="top">
-  <div class="banner-bar"></div>
+  <!-- <div class="banner-bar"></div> -->
   <div class="container-fluid row">
     <div class="col-sm" id="bannerImg1">
       <img class="rounded mx-auto d-block" src="assets/logo/brm.jpg" style="width:210px" alt="BRM Contractors Inc">
@@ -59,6 +59,7 @@
         <li class="nav-item active">
           <a class="nav-link" href="index.html">Home <span class="sr-only"></span></a>
         </li>
+
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#about.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             About Us
@@ -84,7 +85,7 @@
           </div>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="contact-brm.html">Contact Us</a>
+          <a class="nav-link" id="lastNav" href="contact-brm.html">Contact Us</a>
         </li>
     </div>
   </nav>
